[package]
name = "wssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
ssh2 = "0.9.2"
websocket = "0.26.5"

[dev-dependencies]
mockall = "0.11.2"
